--- a/style.css
+++ b/style.css
@@ -161,6 +161,9 @@ form > hr {
   color: darkblue;
 }
 
+.fas.fa-star {
+  color: #ffdb58;
+}
 .article-link > strong {
   color: black;
   font-size: 0.85rem;
